--- a/package.json
+++ b/package.json
@@ -1,47 +1,36 @@
 {
-  "name": "project_webpack",
+  "name": "blackbox_plus",
   "version": "0.0.2",
-  "description": "webpack kit",
+  "description": "BlackBox Plus - Created by [Michael Kubler](https://www.kublermdk.com/) of [Grey Phoenix Productions](https://www.greyphoenix.biz/)",
+  "main": "src/index.js",
+  "private": true,
   "scripts": {
-    "start": "webpack-dev-server --progress --colors",
-    "dev": "set DEBUG=true && webpack-dev-server --progress --colors",
-    "deploy": "webpack -p --progress --colors",
-    "server": "babel-node --presets es2015 -- tools/server",
-    "clean": "babel-node --presets es2015 -- tools/clean",
-    "lint": "eslint src/js"
+    "clean": "rm dist/bundle.js",
+    "build-dev": "webpack -d --mode development",
+    "build-prod": "webpack -p --mode production"
   },
-  "author": "durongzhang",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kublermdk/BlackBox-Plus.git"
+  },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "del": "^2.2.0",
-    "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^4.3.0",
-    "extend": "^3.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.15.0",
-    "open-browser-webpack-plugin": "0.0.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.15",
-    "webpack-dev-server": "^1.14.1"
+  "bugs": {
+    "url": "https://github.com/kublermdk/BlackBox-Plus/issues"
   },
-  "dependencies": {
-    "drupal-common": "0.0.2",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
-    "zepto": "^1.0.1"
-  }
+  "homepage": "https://github.com/kublermdk/BlackBox-Plus#readme",
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {}
 }
