--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,11 @@
     ]
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ]
   ]
 }
