--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode development --watch",
-    "build-prod": "webpack -p --mode production"
+    "build-prod": "webpack -p --mode production",
+    "build-markdown": "marked README.md -o index.html"
   },
   "repository": {
     "type": "git",
@@ -29,12 +30,17 @@
     "css-loader": "^3.4.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "markdown-html-webpack-plugin": "^1.0.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
+    "@mrodrig/json-2-csv-cli": "^3.5.9",
+    "html-loader": "^0.5.5",
+    "json2csv": "^4.5.4",
+    "markdown-loader": "^5.1.0",
     "regenerator-runtime": "^0.13.3"
   }
 }
