--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "extract-loader": "^4.0.3",
+    "file-loader": "^5.0.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "markdown-html-webpack-plugin": "^1.0.1",
