--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-loader": "^0.5.5",
     "json2csv": "^4.5.4",
     "markdown-loader": "^5.1.0",
+    "mocha": "^7.0.1",
     "regenerator-runtime": "^0.13.3"
   }
 }
