--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   "dependencies": {
     "@babel/runtime": "^7.8.4",
     "@mrodrig/json-2-csv-cli": "^3.5.9",
+    "@tensorflow-models/mobilenet": "^2.0.4",
+    "@tensorflow/tfjs": "^1.5.2",
+    "@tensorflow/tfjs-converter": "^1.5.2",
     "html-loader": "^0.5.5",
     "json2csv": "^4.5.4",
     "markdown-loader": "^5.1.0",
